--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@ layout: default
 {% include /content/contact.html %}
 
 <!-- Scripts -->
-	<script src="js/jquery.min.js"></script>
-	<script src="js/jquery.scrollzer.min.js"></script>
-	<script src="js/jquery.scrolly.min.js"></script>
-	<script src="js/skel.min.js"></script>
-	<script src="js/util.js"></script>
-	<!--[if lte IE 8]><script src="js/ie/respond.min.js"></script><![endif]-->
-	<script src="js/main.js"></script>
+<script src="{{ site.baseurl }}/js/jquery.min.js"></script>
+<script src="{{ site.baseurl }}/js/jquery.scrollzer.min.js"></script>
+<script src="{{ site.baseurl }}/js/jquery.scrolly.min.js"></script>
+<script src="{{ site.baseurl }}/js/skel.min.js"></script>
+<script src="{{ site.baseurl }}/js/util.js"></script>
+<!--[if lte IE 8]><script src="js/ie/respond.min.js"></script><![endif]-->
+<script src="{{ site.baseurl }}/js/main.js"></script>
 
